force-app/main/default/objects/Additional_Info__c/Additional_Info__c.object-meta.xml
<CustomObject>
    <label>Notes Attachments and Info</label>
    <nameField>
        <label>Additional Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notes Attachments and Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>