force-app/main/default/objects/Additional_Info__c/fields/Attachment_Type__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Type__c</fullName>
    <label>Attachment Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>