force-app/main/default/objects/Additional_Info__c/fields/Comment_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Comment_Created_By__c</fullName>
    <label>Comment Created By</label>
    <length>25</length>
    <type>Text</type>
</CustomField>