force-app/main/default/objects/Additional_Info__c/fields/Comment_Created_On__c.field-meta.xml
<CustomField>
    <fullName>Comment_Created_On__c</fullName>
    <label>Comment Created On</label>
    <type>Date</type>
</CustomField>