force-app/main/default/objects/Additional_Info__c/fields/CommentID__c.field-meta.xml
<CustomField>
    <fullName>CommentID__c</fullName>
    <label>CommentID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>