force-app/main/default/objects/Additional_Info__c/fields/Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Created__c</fullName>
    <description>Modified date for the note from TIMS</description>
    <label>Date Created</label>
    <type>Date</type>
</CustomField>