force-app/main/default/objects/Additional_Info__c/fields/FK_Patient_Sup_Docs__c.field-meta.xml
<CustomField>
    <fullName>FK_Patient_Sup_Docs__c</fullName>
    <label>FK Patient Sup Docs</label>
    <length>30</length>
    <type>Text</type>
</CustomField>