force-app/main/default/objects/Additional_Info__c/fields/Length_of_External_key__c.field-meta.xml
<CustomField>
    <fullName>Length_of_External_key__c</fullName>
    <description>temporary field used to find duplicates with too short a external key to be correct.</description>
    <formula>LEN( External_Key__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length of External key</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>