force-app/main/default/objects/Additional_Info__c/fields/Patient_Notes__c.field-meta.xml
<CustomField>
    <fullName>Patient_Notes__c</fullName>
    <label>Patient Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>