force-app/main/default/objects/Additional_Info__c/fields/PK_Patient_Notes__c.field-meta.xml
<CustomField>
    <fullName>PK_Patient_Notes__c</fullName>
    <label>PK Patient Notes</label>
    <length>30</length>
    <type>Text</type>
</CustomField>