force-app/main/default/objects/Additional_Info__c/fields/Sequence_Num__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Num__c</fullName>
    <label>Sequence Num</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>