force-app/main/default/objects/Additional_Info__c/fields/TIMSRowVersion__c.field-meta.xml
<CustomField>
    <fullName>TIMSRowVersion__c</fullName>
    <label>TIMSRowVersion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>